fixed full height on projects on smaller devices

--- a/assets/css/partials/components/_project-card.scss
+++ b/assets/css/partials/components/_project-card.scss
@@ -99,7 +99,8 @@
     }
     @media screen and (max-width: $breakpoint-md) {
       align-items: normal;
-      min-height: 180px;
+      max-height: 100%;
+      height: auto;
     }
   }
 }
